--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
     "default_icon": "icon.png"
   },
   "background": {
+    "persistent": false,
     "scripts": [
       "background.js"
     ]
@@ -16,7 +17,6 @@
   },
   "permissions": [
     "activeTab",
-    "tabs",
     "geolocation",
     "cookies",
     "*://*.nexon.com/"
